acomodando responsive footer/body

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
 
-<body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
+<body class="bg-gradient-to-b from-green-400 to-cyan-900 h-screen">
     <header>
         <div class="navbar text-white pt-7 px-10">
             <div class="navbar-start">
@@ -144,7 +144,7 @@
             <!--termina contactos-->
         </section>
     </main>
-    <footer class="footer footer-center p-5 bg-base-100 text-white">
+    <footer class="footer footer-center mt-36 p-5 bg-base-100 text-white relative sm:absolute sm:bottom-0">
         <div>
             <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio
                     Albornoz</span>
@@ -160,7 +160,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
