--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
 
-<body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
+<body class="bg-gradient-to-b from-green-400 to-cyan-900 h-fit sm:h-screen">
   <header>
     <div class="navbar text-white pt-7 px-10">
       <div class="navbar-start">
@@ -276,22 +276,23 @@
     </section>
     <!--termina dashboard-->
   </main>
-  <footer class="footer footer-center p-5 bg-base-100 text-white">
-    <div>
-      <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio Albornoz</span>
-      </p>
-      <p>Copyright © 2022 - Todos los derechos Reservados</p>
-    </div>
-    <div>
-      <div class="grid grid-flow-col gap-4">
-        <a href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i
-            class="fa-brands fa-github fa-2xl"></i></a>
-        <a href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i
-            class="fa-brands fa-linkedin fa-2xl"></i></a>
+  <footer class="">
+    <div class="footer footer-center mt-20 p-5 bg-base-100 text-white relative sm:absolute">
+      <div>
+        <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio Albornoz</span>
+        </p>
+        <p>Copyright © 2022 - Todos los derechos Reservados</p>
+      </div>
+      <div>
+        <div class="grid grid-flow-col gap-4">
+          <a href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-github fa-2xl"></i></a>
+          <a href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i
+              class="fa-brands fa-linkedin fa-2xl"></i></a>
+        </div>
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
