remove footer, trabajando en contactos

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -92,14 +92,14 @@
                             <label class="label">
                                 <span class="label-text text-base text-black">CBU</span>
                             </label>
-                            <input required type="email" placeholder="ej. 224455020187588991022" id="inputCBUAddContact"
+                            <input required type="number" placeholder="ej. 224455020187588991022" id="inputCBUAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="22" maxlength="22" />
                             <!--termina cbu contacto-->
                             <!--arranca alias contacto-->
                             <label class="label">
                                 <span class="label-text text-base text-black">Alias</span>
                             </label>
-                            <input required type="password" placeholder="ej. johndoecitybank" id="inputAliasAddContact"
+                            <input required type="text" placeholder="ej. johndoecitybank" id="inputAliasAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="2" maxlength="40" />
                             <!--termina alias contacto-->
                             <!--boton añadir contacto-->
@@ -144,22 +144,6 @@
             <!--termina contactos-->
         </section>
     </main>
-    <footer class="footer footer-center mt-36 p-5 bg-base-100 text-white relative sm:absolute sm:bottom-0">
-        <div>
-            <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio
-                    Albornoz</span>
-            </p>
-            <p>Copyright © 2022 - Todos los derechos Reservados</p>
-        </div>
-        <div>
-            <div class="grid grid-flow-col gap-4">
-                <a href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-github fa-2xl"></i></a>
-                <a href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-linkedin fa-2xl"></i></a>
-            </div>
-        </div>
-    </footer>
 </body>
 
 </html>
