implementamos for each, con templateClone mas fragment para mostrarlos

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -146,7 +146,7 @@
     </main>
 <template id="template">
     <label for="my-modal-${contador}" class="btn modal-button font-medium text-white">
-        <span class="ml-1">${contacto.contactFullname}</span>
+        <span class="ml-1" id="contactoFullname">${contacto.contactFullname}</span>
     </label>
     <input type="checkbox" id="my-modal-${contador}" class="modal-toggle" />
     <!--cuerpo del modal-->
