reemplace a es6 app.js, cargo valores default sesion invitado y empleo algunos operadores ternarios

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -60,7 +60,10 @@
       <div class="grid grid-cols-4 grid-rows-12 gap-12">
         <!--balances-->
         <!--texto bienvenida-->
-        <h1 class="text-black font-semibold text-3xl col-span-4">¡Bienvenid@ <span id="loggedUser"></span>!</h1>
+        <div class="flex col-span-4 justify-between">
+          <h1 class="text-black font-semibold text-3xl">¡Bienvenid@ <span id="loggedUser"></span>!</h1>
+          <h2 class="text-xl">* CUENTA DE PRUEBA</h2>
+        </div>
         <!--fin texto bienvenida-->
         <!--balance pesos-->
         <div class="stats text-black col-span-4 md:col-span-2 row-span-3 bg-gray-100 rounded-box">
