--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
   <title>Bornoz Bank | Inicio</title>
-  <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
+  <script defer src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
   <script defer src="./js/dashboard.js"></script>
   <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
@@ -54,15 +54,15 @@
       <!--termina navbar end-->
     </div>
   </header>
-  <main class="">
+  <main>
     <!--arranca dashboard-->
     <section id="dashboard" class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 h-fit bg-white rounded-box">
       <div class="grid grid-cols-4 grid-rows-12 gap-12">
         <!--balances-->
         <!--texto bienvenida-->
-        <div class="flex col-span-4 justify-between">
+        <div class="flex flex-col sm:flex-row col-span-4 justify-between">
           <h1 class="text-black font-semibold text-3xl">¡Bienvenid@ <span id="loggedUser"></span>!</h1>
-          <h2 class="text-xl">* CUENTA DE PRUEBA</h2>
+          <h2 class="text-xl mt-4">* CUENTA DE PRUEBA</h2>
         </div>
         <!--fin texto bienvenida-->
         <!--balance pesos-->
