eliminar contacto funcion

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -92,7 +92,7 @@
                             <label class="label">
                                 <span class="label-text text-base text-black">CBU</span>
                             </label>
-                            <input required type="number" placeholder="ej. 224455020187588991022" id="inputCBUAddContact"
+                            <input required type="text" placeholder="ej. 224455020187588991022" id="inputCBUAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="22" maxlength="22" />
                             <!--termina cbu contacto-->
                             <!--arranca alias contacto-->
