add section desarollador

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -28,7 +28,7 @@
                                 class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
                         <li><a href="./contactos.html" rel="noopener noreferrer"
                                 class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
-                        <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Transferencias</a></li>
+                        <li><a href="./desarrollador.html" rel="noopener noreferrer">Desarrollador</a></li>
                     </ul>
                 </div>
                 <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img
@@ -39,7 +39,7 @@
                     <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
                     <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a>
                     </li>
-                    <li><a class="active:bg-cyan-900">Transferencias</a></li>
+                    <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
                 </ul>
             </div>
             <div class="navbar-end">
