--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -26,7 +26,7 @@
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
             <li><a href="./dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
             <li><a href="./contactos.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
-            <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Transferencias</a></li>
+            <li><a href="./desarrollador.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Desarrollador</a></li>
           </ul>
         </div>
         <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10"
@@ -36,7 +36,7 @@
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
           <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
           <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
-          <li><a class="active:bg-cyan-900">Transferencias</a></li>
+          <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
         </ul>
       </div>
       <div class="navbar-end">
