--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="bg-gradient-to-b from-green-400 to-cyan-900">
+<body class="bg-gradient-to-b from-green-400 to-cyan-900 overflow-x-hidden">
   <header>
     <div class="navbar text-white pt-7 px-10">
       <!--arranca navbar start-->
@@ -26,7 +26,7 @@
       </div>
       <!--termina navbar center-->
       <!--arranca navbar end-->
-      <div class="navbar-end">
+      <div class="navbar-end" data-aos="fade-down" data-aos-delay="150" data-aos-duration="600">
         <!--arranca modal register-->
         <label for="my-modal-4"
           class="btn modal-button font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</label>
