add reseteo despues de eliminar prevencion de BUG

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -60,7 +60,7 @@
     </header>
     <main>
         <!--arranca contactos-->
-        <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-6/12 h-fit bg-white rounded-box text-black"  data-aos="fade-up" data-aos-delay="150" data-aos-duration="600">
+        <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-6/12 h-fit bg-white rounded-box text-black">
             <div class="flex justify-between mb-4">
                 <h2 class="text-2xl mb-4 ">Contactos</h2>
                 <label for="my-modal-0"
