addeo de seccion cotizaciones in progress, fetch in progress

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       </div>
       <!--termina navbar center-->
       <!--arranca navbar end-->
-      <div class="navbar-end" data-aos="fade-down" data-aos-delay="150" data-aos-duration="600">
+      <div class="navbar-end">
         <!--arranca modal register-->
         <label for="my-modal-4"
           class="btn modal-button font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</label>
