--- a/src/bolsa.html
+++ b/src/bolsa.html
@@ -58,20 +58,10 @@
         </div>
     </header>
     <main>
-        <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-4/12 h-fit bg-white rounded-box text-black" data-aos="fade-up" data-aos-delay="150" data-aos-duration="600">
+        <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-10/12 h-fit bg-white rounded-box text-black" data-aos="fade-up" data-aos-delay="150" data-aos-duration="600">
             <div class="text-center mt-6">
                 <div>
-                    <p class="text-xl">Desarrollado por:</p>
-                    <p class="font-bold text-2xl mt-2">Patricio Albornoz</p>
-                    <p class="font-thin text-base mt-6">Copyright © 2022 - Todos los derechos reservados</p>
-                </div>
-                <div class="mt-2 w-1/3 mx-auto">
-                    <div class="grid grid-flow-col gap-2">
-                      <a class="hover:bg-blue-500 p-2 rounded-box hover:text-white" href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i
-                          class="fa-brands fa-github fa-2xl"></i></a>
-                      <a class="hover:bg-blue-500 p-2 rounded-box hover:text-white" href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i
-                          class="fa-brands fa-linkedin fa-2xl"></i></a>
-                    </div>
+                    <p class="text-2xl">Cotizaciones</p>
                 </div>
             </div>
         </section>
