addeo de cotizaciones.js y ruteo HTML

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -29,6 +29,8 @@
                                 class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
                         <li><a href="./contactos.html" rel="noopener noreferrer"
                                 class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
+                        <li><a href="./cotizaciones.html" rel="noopener noreferrer"
+                                class="hover:bg-cyan-900 active:bg-cyan-900">Cotizaciones</a></li>        
                         <li><a href="./desarrollador.html" rel="noopener noreferrer">Desarrollador</a></li>
                     </ul>
                 </div>
@@ -38,8 +40,8 @@
             <div class="navbar-center hidden lg:flex justify-center align-middle">
                 <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
                     <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
-                    <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a>
-                    </li>
+                    <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
+                    <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
                     <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
                 </ul>
             </div>
