--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -27,6 +27,7 @@
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
             <li><a href="./dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
             <li><a href="./contactos.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
+            <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Cotizaciones</a></li>
             <li><a href="./desarrollador.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Desarrollador</a></li>
           </ul>
         </div>
@@ -37,6 +38,7 @@
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
           <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
           <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
+          <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
           <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
         </ul>
       </div>
