--- a/src/cotizaciones.html
+++ b/src/cotizaciones.html
@@ -26,7 +26,7 @@
                                     class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
                             <li><a href="./contactos.html" rel="noopener noreferrer"
                                     class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
-                            <li><a href="./bolsa.html" rel="noopener noreferrer">Cotizaciones</a></li>
+                            <li><a href="./cotizaciones.html" rel="noopener noreferrer">Cotizaciones</a></li>
                             <li><a href="./desarrollador.html" rel="noopener noreferrer">Desarrollador</a></li>
                         </ul>
                     </div>
@@ -37,7 +37,7 @@
                     <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
                         <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
                         <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
-                        <li><a href="./bolsa.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
+                        <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
                         <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
                     </ul>
                 </div>
@@ -62,10 +62,6 @@
                     <p class="text-2xl">Cotizaciones</p>
                 </div>
                 <div class="mt-4 grid grid-cols-4 place-items-center" id="contenedorCotizaciones">
-                    <div>a</div>
-                    <div>a</div>
-                    <div>a</div>
-                    <div>a</div>
                 </div>
             </section>
         </main>
