--- a/src/desarrollador.html
+++ b/src/desarrollador.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../dist/output.css" rel="stylesheet">
-    <title>Bornoz Bank | Contactos</title>
+    <title>Bornoz Bank | Desarrollador</title>
     <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
 </head>
