--- a/src/cotizaciones.html
+++ b/src/cotizaciones.html
@@ -61,7 +61,9 @@
                 <div class="mt-4">
                     <p class="text-2xl">Cotizaciones</p>
                 </div>
-                <div class="mt-4 grid grid-cols-4 place-items-center" id="contenedorCotizaciones">
+                <div class="mt-4 text-center bg-gray-100 p-4 rounded-box hidden" id="contenedorCotizacionesError">
+                </div>
+                <div class="mt-4 grid grid-cols-1 sm:grid-cols-3 md:grid-cols-3 gap-4" id="contenedorCotizaciones">
                 </div>
             </section>
         </main>
