--- a/src/cotizaciones.html
+++ b/src/cotizaciones.html
@@ -23,11 +23,13 @@
                         <ul tabindex="0"
                             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
                             <li><a href="./dashboard.html" rel="noopener noreferrer"
-                                    class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
+                                    class="active:bg-inherit active:text-green-400">Home</a></li>
                             <li><a href="./contactos.html" rel="noopener noreferrer"
-                                    class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
-                            <li><a href="./cotizaciones.html" rel="noopener noreferrer">Cotizaciones</a></li>
-                            <li><a href="./desarrollador.html" rel="noopener noreferrer">Desarrollador</a></li>
+                                    class="active:bg-inherit active:text-green-400">Contactos</a></li>
+                            <li><a href="./cotizaciones.html" rel="noopener noreferrer"
+                                    class="active:bg-inherit active:text-green-400">Cotizaciones</a></li>
+                            <li><a href="./desarrollador.html" rel="noopener noreferrer"
+                                    class="active:bg-inherit active:text-green-400">Desarrollador</a></li>
                         </ul>
                     </div>
                     <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img
@@ -35,10 +37,10 @@
                 </div>
                 <div class="navbar-center hidden lg:flex justify-center align-middle">
                     <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-                        <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
-                        <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
-                        <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
-                        <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
+                        <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Home</a></li>
+                        <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Contactos</a></li>
+                        <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Cotizaciones</a></li>
+                        <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Desarrollador</a></li>
                     </ul>
                 </div>
                 <div class="navbar-end">
@@ -57,7 +59,7 @@
             </div>
         </header>
         <main>
-            <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-10/12 h-fit bg-white rounded-box text-black" data-aos="fade-up" data-aos-delay="150" data-aos-duration="600">
+            <section class="container-fluid mx-auto mt-10 mb-10 p-10 w-11/12 sm:w-10/12 h-fit bg-white rounded-box text-black">
                 <div class=""><p class="text-2xl">Cotizaciones</p></div>
                 <div id="loader">
                     <div class="mt-4 flex justify-center">
