--- a/src/desarrollador.html
+++ b/src/desarrollador.html
@@ -24,11 +24,13 @@
                     <ul tabindex="0"
                         class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
                         <li><a href="./dashboard.html" rel="noopener noreferrer"
-                                class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
+                            class="active:bg-inherit active:text-green-400">Home</a></li>
                         <li><a href="./contactos.html" rel="noopener noreferrer"
-                                class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
-                        <li><a href="./cotizaciones.html" rel="noopener noreferrer">Cotizaciones</a></li>
-                        <li><a href="./desarrollador.html" rel="noopener noreferrer">Desarrollador</a></li>
+                                class="active:bg-inherit active:text-green-400">Contactos</a></li>
+                        <li><a href="./cotizaciones.html" rel="noopener noreferrer"
+                                class="active:bg-inherit active:text-green-400">Cotizaciones</a></li>
+                        <li><a href="./desarrollador.html" rel="noopener noreferrer"
+                                class="active:bg-inherit active:text-green-400">Desarrollador</a></li>
                     </ul>
                 </div>
                 <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img
@@ -36,10 +38,10 @@
             </div>
             <div class="navbar-center hidden lg:flex justify-center align-middle">
                 <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
-                    <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
-                    <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
-                    <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-cyan-900">Cotizaciones</a></li>
-                    <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-cyan-900">Desarrollador</a></li>
+                    <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Home</a></li>
+                        <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Contactos</a></li>
+                        <li><a href="./cotizaciones.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Cotizaciones</a></li>
+                        <li><a href="./desarrollador.html" rel="noopener noreferrer" class="active:bg-inherit active:text-green-400">Desarrollador</a></li>
                 </ul>
             </div>
             <div class="navbar-end">
