--- a/src/desarrollador.html
+++ b/src/desarrollador.html
@@ -8,6 +8,7 @@
     <title>Bornoz Bank | Desarrollador</title>
     <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
+    <script defer src="js/desarrollador.js"></script>
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 h-screen">
