overflow hidden en index

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="bg-gradient-to-b from-green-400 to-cyan-900 overflow-x-hidden">
+<body class="bg-gradient-to-b from-green-400 to-cyan-900 overflow-x-hidden overflow-y-hidden">
   <header>
     <div class="navbar text-white pt-7 px-10">
       <!--arranca navbar start-->
