update validacion register finished

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <h2 class="text-gray-400 text-center text-2xl pt-1">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
               <!--arranca register-->
-              <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="registerForm">
+              <form class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="registerForm">
                 <!--arranca register usuario-->
                 <label class="label">
                   <span class="label-text text-base">Nombre de usuario</span>
@@ -83,7 +83,7 @@
                   </div>
                 </div>
                 <!--termina error en registro-->
-              </div>
+              </form>
               <!--termina form interno-->
             </div>
             <!--termina form-->
