modificacion de rutas para netlify 2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../dist/output.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
   <title>Bornoz Bank</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
-  <script defer src="../src/js/app.js"></script>
-  <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
+  <script defer src="./src/js/app.js"></script>
+  <link rel="shortcut icon" href="./src/assets/logo.png" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
       <!--arranca navbar start-->
       <div class="navbar-start">
         <a rel="noopener noreferrer" class="btn btn-ghost normal-case text-xl hidden sm:flex "><img class="flex w-10"
-            src="../src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
+            src="./src/assets/logo-blanco.png" alt="logo de Bornoz Bank"></a>
       </div>
       <!--termina navbar end-->
       <!--arranca navbar center-->
@@ -33,7 +33,7 @@
         <input type="checkbox" id="my-modal-4" class="modal-toggle" />
         <label for="my-modal-4" class="modal cursor-pointer">
           <label class="modal-box relative w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col" for="">
-            <img class="flex w-16 mx-auto pt-4" src="../src/assets/logo-negro.png" alt="logo de Bornoz Bank">
+            <img class="flex w-16 mx-auto pt-4" src="./src/assets/logo-negro.png" alt="logo de Bornoz Bank">
             <h2 class="text-black text-center text-3xl font-semibold">Bornoz Bank</h2>
             <h2 class="text-gray-400 text-center text-2xl pt-1">Registrese aquí debajo gratis</h2>
             <div class="form flex flex-col items-center">
