--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="es">
 
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R8E88BVZCY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R8E88BVZCY');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./dist/output.css" rel="stylesheet">
