cambio input a numbers

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -85,7 +85,7 @@
                 <label class="modal-box relative bg-white" for="">
                   <h3 class="text-lg font-bold">Ingrese la cantidad a retirar:</h3>
                   <div class="flex my-2">
-                    <input type="text" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputRetirarARSConfirmar" minlength="1"/>
+                    <input type="number" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputRetirarARSConfirmar" minlength="1"/>
                     <button class="btn btn-outline btn-success" id="btnRetirarARSConfirmar">Confirmar</button>
                   </div>
                   <!--arranca cargando progress bar exito-->
@@ -111,7 +111,7 @@
                 <label class="modal-box relative bg-white" for="">
                   <h3 class="text-lg font-bold">Ingrese la cantidad a depositar:</h3>
                   <div class="flex my-2">
-                    <input type="text" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputDepositarARSConfirmar" minlength="1"/>
+                    <input type="number" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputDepositarARSConfirmar" minlength="1"/>
                     <button class="btn btn-outline btn-success" id="btnDepositarARSConfirmar">Confirmar</button>
                   </div>    
                   <!--arranca error en depositar-->
@@ -168,7 +168,7 @@
                 <label class="modal-box relative bg-white" for="">
                   <h3 class="text-lg font-bold">Ingrese la cantidad a depositar:</h3>
                   <div class="flex my-2">
-                    <input type="text" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputDepositarUSDConfirmar" minlength="1"/>
+                    <input type="number" placeholder="Escriba aquí la cantidad por favor" class="input input-bordered w-full max-w-xs bg-gray-300 hover:bg-white focus:bg-white mr-2" id="inputDepositarUSDConfirmar" minlength="1"/>
                     <button class="btn btn-outline btn-success" id="btnDepositarUSDConfirmar">Confirmar</button>
                   </div>
                   <!--arranca cargando progress bar exito-->
